--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -5,10 +5,84 @@
     android:layout_height="match_parent"
     tools:context=".presentation.view.community.CommunityFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
-        android:text="community" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+        <ImageView
+            android:id="@+id/community_search_iv"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/community_search_icon"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintEnd_toStartOf="@id/community_notify_iv"
+            app:layout_constraintTop_toTopOf="parent"/>
+        <ImageView
+            android:id="@+id/community_notify_iv"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/community_notify_icon"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintEnd_toStartOf="@id/community_sos_iv"
+            app:layout_constraintTop_toTopOf="parent"/>
+        <ImageView
+            android:id="@+id/community_sos_iv"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/community_sos_icon"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/community_category_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:gravity="center"
+            app:tabMaxWidth="0dp"
+            app:tabGravity="start"
+            app:tabMode="scrollable"
+            app:tabIndicatorFullWidth="false"
+            app:tabRippleColor="@android:color/transparent"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/community_search_iv"
+            app:layout_constraintBottom_toTopOf="@id/community_viewpage"
+            app:tabIndicatorColor="@color/black"
+            app:tabIndicatorGravity="bottom"
+            app:tabSelectedTextColor="@color/white"/>
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/community_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:gravity="center"
+            app:tabMaxWidth="0dp"
+            app:tabGravity="start"
+            app:tabMode="scrollable"
+            app:tabIndicatorFullWidth="false"
+            app:tabRippleColor="@android:color/transparent"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/community_search_iv"
+            app:layout_constraintBottom_toTopOf="@id/community_viewpage"
+            app:tabIndicatorColor="@color/black"
+            app:tabIndicatorGravity="bottom"
+            app:tabSelectedTextColor="@color/white"/>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/community_viewpage"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/community_tab_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
