--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -52,33 +52,46 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/community_search_iv"
             app:layout_constraintBottom_toTopOf="@id/community_viewpage"
-            app:tabIndicatorColor="@color/black"
+            app:tabIndicatorColor="#F37E13"
             app:tabIndicatorGravity="bottom"
-            app:tabSelectedTextColor="@color/white"/>
+            app:tabSelectedTextColor="@color/black"/>
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/community_tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center"
-            app:tabMaxWidth="0dp"
-            app:tabGravity="start"
-            app:tabMode="scrollable"
-            app:tabIndicatorFullWidth="false"
-            app:tabRippleColor="@android:color/transparent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/community_search_iv"
-            app:layout_constraintBottom_toTopOf="@id/community_viewpage"
-            app:tabIndicatorColor="@color/black"
-            app:tabIndicatorGravity="bottom"
-            app:tabSelectedTextColor="@color/white"/>
+        <TextView
+            android:id="@+id/community_recommended_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="추천순"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/community_category_tab_layout"
+            app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/community_time_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="시간순"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/community_category_tab_layout"
+            app:layout_constraintStart_toEndOf="@id/community_recommended_button" />
+        <View
+            android:id="@+id/divider"
+            android:layout_width="wrap_content"
+            android:layout_height="2dp"
+            android:background="#D7D7D5"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/community_recommended_button"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/community_viewpage"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/community_tab_layout"
+            app:layout_constraintTop_toBottomOf="@id/divider"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
