--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -25,6 +25,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/iv_sos"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
