--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -25,11 +25,12 @@
             android:layout_width="0dp"
             android:layout_height="53dp"
             app:cardCornerRadius="4dp"
+            app:cardElevation="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            app:layout_constraintTop_toTopOf="@id/iv_sos"
+            app:layout_constraintTop_toTopOf="@id/cv_sos"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iv_sos">
+            app:layout_constraintEnd_toStartOf="@id/cv_sos">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -58,16 +59,27 @@
 
         </androidx.cardview.widget.CardView>
 
-    <ImageView
-        android:id="@+id/iv_sos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_sos"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
+        app:cardCornerRadius="4dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/iv_sos"
-        android:elevation="10dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/white"
+        app:cardElevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_sos"
+            android:layout_gravity="center"
+            android:background="@color/white"/>
+
+    </androidx.cardview.widget.CardView>
+
 
     <ImageView
         android:id="@+id/iv_location"
@@ -78,7 +90,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"/>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
