--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -12,14 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/community_writing_back_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/back_icon"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <TextView
             android:id="@+id/community_writing_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="글쓰기"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -28,10 +38,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="완료"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="#D7D7D5"
-            android:layout_marginTop="10dp"
+            android:textColor="#888886"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -41,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="2dp"
             android:background="#D7D7D5"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_name_tv"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -50,9 +60,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="게시글의 카테고리를 선택해주세요"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
+            android:textColor="#888886"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider1"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -62,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="2dp"
             android:background="#D7D7D5"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_category_tv"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -71,9 +82,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="제목을 작성해 주세요"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
+            android:textColor="#888886"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider2"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -83,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="2dp"
             android:background="#D7D7D5"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_title_tv"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -91,7 +103,7 @@
             android:id="@+id/community_writing_image_select"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider3"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -101,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="2dp"
             android:background="#D7D7D5"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_image_select"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -112,7 +124,7 @@
             android:hint="자유롭게 글을 작성해 주세요.(최소 10자 이상)"
             android:background="@android:color/transparent"
             android:inputType="none"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider4"
             app:layout_constraintStart_toStartOf="parent"/>
