--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,54 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".presentation.view.map.SearchActivity">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_search"
+    <EditText
+        android:id="@+id/et_search"
+        android:background="@drawable/search_style"
+        android:elevation="10dp"
         android:layout_width="0dp"
         android:layout_height="53dp"
-        app:cardCornerRadius="4dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="@id/iv_sos"
+        app:layout_constraintTop_toTopOf="@id/cv_sos"
+        android:hint="00구 00동"
+        android:paddingStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/iv_sos">
+        app:layout_constraintEnd_toStartOf="@id/cv_sos"
+        />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_current_location"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="서대문구 연희동"
-                android:gravity="center_vertical"
-                android:layout_marginStart="10dp"
-                android:textSize="20dp"
-                />
-
-            <ImageView
-                android:id="@+id/iv_search"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/iv_search"
-                android:layout_marginEnd="10dp"
-                />
-        </LinearLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_sos"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
+        app:cardCornerRadius="4dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/white"
+        app:cardElevation="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_sos"
+            android:layout_gravity="center"
+            android:background="@color/white"/>
 
     </androidx.cardview.widget.CardView>
-
-    <ImageView
-        android:id="@+id/iv_sos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/iv_sos"
-        android:elevation="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_edit"
@@ -62,14 +50,24 @@
         android:text="@string/edit"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_sos"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/cv_sos"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintBottom_toTopOf="@id/rv_list"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/white"
+        tools:listitem="@layout/item_search"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_edit" />
