--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -101,12 +101,23 @@
 
         <ImageView
             android:id="@+id/community_writing_image_select"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/community_image_upload"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider3"
             app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/selectedImagesContainer"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal"
+            tools:listitem="@layout/item_writing_community_image"
+            app:layout_constraintStart_toEndOf="@id/community_writing_image_select"
+            app:layout_constraintTop_toBottomOf="@id/divider3" />
 
         <View
             android:id="@+id/divider4"
@@ -126,8 +137,10 @@
             android:inputType="none"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider4"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
