--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,18 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="main">#FFF37E13</color>
+    <color name="main_orange">#FFF37E13</color>
+    <color name="sub_orange">#FFAF66</color>
+    <color name="sub_white">#FFF4EB</color>
+    <color name="support_orange">#FF643E</color>
+    <color name="yellow">#F0AB26</color>
+    <color name="green">#8ACF19</color>
+    <color name="sub_black">#222019</color>
+    <color name="deep_gray">#4A4945</color>
+    <color name="normal_gray">#71716E</color>
+    <color name="sub_gray">#888886</color>
+    <color name="light_gray">#D7D7D5</color>
+    <color name="support_white">#F1F1F1</color>
+    <color name="support_white2">#F7F7F7</color>
 
 </resources>
