--- a/app/src/main/res/layout/bottomsheet_map.xml
+++ b/app/src/main/res/layout/bottomsheet_map.xml
@@ -141,6 +141,77 @@
         app:layout_constraintEnd_toEndOf="@id/iv_share"
         android:text="공유"/>
 
+<!--    관리기관명-->
+    <TextView
+        android:id="@+id/tv_manage_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="관리기관명"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_call"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_manage_institution"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="서대문구청"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toEndOf="@id/tv_manage_title"
+        app:layout_constraintTop_toTopOf="@id/tv_manage_title" />
+
+    <TextView
+        android:id="@+id/tv_manage_copy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/copy"
+        android:layout_marginStart="70dp"
+        app:layout_constraintStart_toEndOf="@id/tv_manage_institution"
+        app:layout_constraintTop_toTopOf="@id/tv_manage_title" />
+
+<!--    번호-->
+    <TextView
+        android:id="@+id/tv_number_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="번호"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_manage_title"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_number_institution"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0507-1380-1266"
+        app:layout_constraintStart_toStartOf="@id/tv_manage_institution"
+        app:layout_constraintStart_toEndOf="@id/tv_manage_title"
+        app:layout_constraintTop_toTopOf="@id/tv_number_title" />
+
+    <TextView
+        android:id="@+id/tv_number_copy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/copy"
+        app:layout_constraintStart_toStartOf="@id/tv_manage_copy"
+        app:layout_constraintStart_toEndOf="@id/tv_manage_institution"
+        app:layout_constraintTop_toTopOf="@id/tv_number_title" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_write_complaint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/complaint"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/button_style"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/tv_number_title"
+        android:layout_marginTop="30dp" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
