--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp" /> <!-- Radius 설정 -->
-    <solid android:color="@color/main" /> <!-- 배경색 -->
+    <solid android:color="@color/main_orange" /> <!-- 배경색 -->
 </shape>
