--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -23,6 +23,7 @@
             android:orientation="horizontal">
 
             <TextView
+                style="@style/Head1"
                 android:id="@+id/tv_current_location"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
