--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="8dp" /> <!-- Radius 설정 -->
+    <corners android:radius="4dp" /> <!-- Radius 설정 -->
     <solid android:color="@color/main_orange" /> <!-- 배경색 -->
+    <padding android:top="13dp" android:bottom="13dp" />
 </shape>
