--- a/app/src/main/res/layout/bottomsheet_map.xml
+++ b/app/src/main/res/layout/bottomsheet_map.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
+        android:textColor="@color/gray_scale8"
         android:text="@string/marker_bottomsheet"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,8 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:text="16m"
+        android:textColor="@color/gray_scale8"
         app:layout_constraintTop_toBottomOf="@id/tv_marker_bottom"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -34,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/iv_star"
+        android:layout_marginStart="25dp"
         app:layout_constraintStart_toEndOf="@+id/tv_distance"
         app:layout_constraintTop_toTopOf="@id/tv_distance"
         />
@@ -42,6 +45,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="4.41(15)"
+        android:layout_marginStart="6dp"
+        android:textColor="@color/gray_scale8"
         app:layout_constraintStart_toEndOf="@+id/iv_star"
         app:layout_constraintTop_toTopOf="@id/tv_distance"
         />
@@ -51,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/iv_time"
+        android:layout_marginStart="25dp"
         app:layout_constraintStart_toEndOf="@+id/tv_star"
         app:layout_constraintTop_toTopOf="@id/tv_distance"
         />
@@ -60,6 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(평일) 0:00 ~ 24:00"
+        android:layout_marginStart="8dp"
+        android:textColor="@color/gray_scale8"
         app:layout_constraintStart_toEndOf="@+id/iv_time"
         app:layout_constraintTop_toTopOf="@id/tv_distance"
         />
@@ -69,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/iv_call"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
         app:layout_constraintTop_toBottomOf="@id/tv_distance"
@@ -79,6 +87,8 @@
         android:id="@+id/tv_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:textColor="@color/gray_scale8"
         app:layout_constraintTop_toBottomOf="@id/iv_call"
         app:layout_constraintStart_toStartOf="@id/iv_call"
         app:layout_constraintEnd_toEndOf="@id/iv_call"
@@ -98,6 +108,8 @@
         android:id="@+id/tv_bookmark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:textColor="@color/gray_scale8"
         app:layout_constraintTop_toBottomOf="@id/iv_bookmark"
         app:layout_constraintStart_toStartOf="@id/iv_bookmark"
         app:layout_constraintEnd_toEndOf="@id/iv_bookmark"
@@ -117,6 +129,8 @@
         android:id="@+id/tv_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:textColor="@color/gray_scale8"
         app:layout_constraintTop_toBottomOf="@id/iv_guide"
         app:layout_constraintStart_toStartOf="@id/iv_guide"
         app:layout_constraintEnd_toEndOf="@id/iv_guide"
@@ -127,6 +141,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/iv_share"
+        android:layout_marginTop="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_guide"
         app:layout_constraintTop_toTopOf="@id/iv_call"
@@ -136,27 +151,41 @@
         android:id="@+id/tv_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/gray_scale8"
         app:layout_constraintTop_toBottomOf="@id/iv_share"
         app:layout_constraintStart_toStartOf="@id/iv_share"
         app:layout_constraintEnd_toEndOf="@id/iv_share"
         android:text="공유"/>
 
 <!--    관리기관명-->
+    <ImageView
+        android:id="@+id/iv_manage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/iv_manage"
+        android:layout_marginStart="14dp"
+        app:layout_constraintTop_toTopOf="@id/tv_manage_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tv_manage_title"
+        />
     <TextView
         android:id="@+id/tv_manage_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="관리기관명"
-        android:layout_marginStart="20dp"
+        android:textColor="@color/gray_scale8"
+        android:layout_marginStart="3dp"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/tv_call"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/iv_manage"
+         />
 
     <TextView
         android:id="@+id/tv_manage_institution"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="서대문구청"
+        android:textColor="@color/gray_scale8"
         android:layout_marginStart="20dp"
         app:layout_constraintStart_toEndOf="@id/tv_manage_title"
         app:layout_constraintTop_toTopOf="@id/tv_manage_title" />
@@ -166,26 +195,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/copy"
-        android:layout_marginStart="70dp"
+        android:textColor="@color/gray_scale5"
+        android:layout_marginStart="14dp"
         app:layout_constraintStart_toEndOf="@id/tv_manage_institution"
         app:layout_constraintTop_toTopOf="@id/tv_manage_title" />
 
 <!--    번호-->
+    <ImageView
+        android:id="@+id/iv_call_complaint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/iv_call_complaint"
+        android:layout_marginStart="22dp"
+        app:layout_constraintTop_toTopOf="@id/tv_number_title"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
     <TextView
         android:id="@+id/tv_number_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="번호"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:textColor="@color/gray_scale8"
+        android:layout_marginTop="22dp"
         app:layout_constraintTop_toBottomOf="@id/tv_manage_title"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/tv_manage_title" />
 
     <TextView
         android:id="@+id/tv_number_institution"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0507-1380-1266"
+        android:textColor="@color/gray_scale8"
         app:layout_constraintStart_toStartOf="@id/tv_manage_institution"
         app:layout_constraintStart_toEndOf="@id/tv_manage_title"
         app:layout_constraintTop_toTopOf="@id/tv_number_title" />
@@ -195,8 +236,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/copy"
-        app:layout_constraintStart_toStartOf="@id/tv_manage_copy"
-        app:layout_constraintStart_toEndOf="@id/tv_manage_institution"
+        android:textColor="@color/gray_scale5"
+        android:layout_marginStart="14dp"
+        app:layout_constraintStart_toEndOf="@id/tv_number_institution"
         app:layout_constraintTop_toTopOf="@id/tv_number_title" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -210,7 +252,7 @@
         android:background="@drawable/button_style"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/tv_number_title"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="44dp" />
 
 
 
