--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -24,33 +24,40 @@
         />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_login_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sos_title"
+        android:text="@string/login_title"
         android:textColor="@color/red"
         android:gravity="center"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="6dp"/>
 
     <TextView
-        android:id="@+id/tv_subTitle"
+        android:id="@+id/tv_login_Subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/help"
+        android:text="@string/login_sub"
         android:textColor="@color/gray_scale6"
         android:gravity="center" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_dialog"
+    <ImageView
+        android:id="@+id/btn_kakao_login"
+        android:src="@drawable/kakao_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/call"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="22dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
-        android:background="@drawable/button_style"
-        android:textColor="@color/white"
-        android:layout_marginTop="26dp" />
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:id="@+id/tv_login_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/login_input"
+        android:textColor="@color/gray_scale6"
+        android:gravity="center"
+        android:layout_marginBottom="30dp"/>
 
 </LinearLayout>
