--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -27,7 +27,7 @@
             app:cardCornerRadius="4dp"
             app:cardElevation="10dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintTop_toTopOf="@id/cv_sos"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/cv_sos">
@@ -43,8 +43,9 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="서대문구 연희동"
+                    android:textColor="@color/gray_scale6"
                     android:gravity="center_vertical"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="9dp"
                     android:textSize="20dp"
                     />
 
@@ -53,7 +54,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/iv_search"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="8dp"
                     />
             </LinearLayout>
 
@@ -89,7 +90,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="22dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
