--- a/app/src/main/res/layout/item_recent.xml
+++ b/app/src/main/res/layout/item_recent.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:padding="12dp">
 
     <ImageView
         android:id="@+id/iv_search"
@@ -16,10 +16,9 @@
         android:id="@+id/tv_searchLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="2dp"
         android:text="최근 검색"
-        android:textSize="14sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/gray_scale8"/>
 
     <View
         android:layout_width="0dp"
@@ -31,7 +30,7 @@
         android:id="@+id/iv_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="9dp"
         android:src="@drawable/iv_close"
         />
 </LinearLayout>
