--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:padding="12dp">
 
     <ImageView
         android:id="@+id/iv_search"
@@ -16,9 +16,8 @@
         android:id="@+id/tv_searchLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="2dp"
         android:text="자연사 박물관"
-        android:textSize="14sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/gray_scale8"/>
 
 </LinearLayout>
