--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
     <color name="gray_scale2">#F1F1F1</color>
     <color name="gray_scale1">#F7F7F7</color>
 
+    <color name="red">#FF4C13</color>
+
+
 </resources>
