--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,13 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/list_main"
-    tools:context=".presentation.view.list.ListFragment">
+    android:layout_height="match_parent"
+    tools:context=".presentation.view.list.ListFragment"
+    android:id="@+id/list_main">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
     <!-- Search Bar -->
     <RelativeLayout
@@ -20,7 +20,6 @@
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_edit_text"
-
             android:layout_width="match_parent"
             android:layout_height="31dp"
             android:layout_marginTop="41dp"
