--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,63 +6,133 @@
     tools:context=".presentation.view.list.ListFragment"
     android:id="@+id/list_main">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    <!-- Search Bar -->
-    <RelativeLayout
-        android:id="@+id/search_bar"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_search"
+        android:layout_width="0dp"
+        android:layout_height="53dp"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="@id/cv_sos"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/cv_sos">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_current_location"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="00구 00동"
+                android:textColor="@color/gray_scale6"
+                android:gravity="center_vertical"
+                android:layout_marginStart="9dp"
+                android:textSize="20dp"
+                />
+
+            <ImageView
+                android:id="@+id/iv_search"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/iv_search"
+                android:layout_marginEnd="8dp"
+                />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_sos"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
+        app:cardCornerRadius="4dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/white"
+        app:cardElevation="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_sos"
+            android:layout_gravity="center"
+            android:background="@color/white"/>
+
+    </androidx.cardview.widget.CardView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="9dp"
+        android:layout_marginStart="20dp"
         android:orientation="horizontal">
 
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/search_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="31dp"
-            android:layout_marginTop="41dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="50dp"
-            android:textSize="12sp"
-            android:queryHint="서대문구 연희동"
-            android:background="#FFFFFF" />
-
-
-
-
-
-
         <ImageView
-            android:id="@+id/sos_button"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="9dp"
-            android:layout_marginTop="41dp"
-            android:src="@drawable/iv_sos"
-            android:background="#FFFFFF"/>
-    </RelativeLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_sort_selected"
+            android:layout_marginTop="95dp" />
 
-    <TextView
-        android:id="@+id/meter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_marginStart="30dp"
-        android:text="거리순"
-        android:textSize="12sp" />
+        <TextView
+            android:id="@+id/meter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="88dp"
+            android:layout_marginStart="5dp"
+            android:text="거리순"
+            android:textSize="12sp" />
 
 
-    <TextView
-        android:id="@+id/star"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_marginStart="91dp"
-        android:text="별점순"
-        android:textSize="12sp" />
+    </LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="81dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_sort_unselected"
+                android:layout_marginTop="95dp" />
+
+            <TextView
+                android:id="@+id/star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="88dp"
+                android:layout_marginStart="5dp"
+                android:text="별점순"
+                android:textSize="12sp" />
+
+
+        </LinearLayout>
+
+
+
+
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
@@ -74,6 +144,6 @@
          />
 
 
-</RelativeLayout>
+
 
 </FrameLayout>
